Add anchor tags to headings on homepage.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -45,6 +45,11 @@ footer {
   color: #333;
 }
 
+a[name] {
+  color: #6d6d6d;
+  text-decoration: none;
+}
+
 /* Navbar CSS adapted from
 https://dev.to/supanthapaul/create-a-simple-navbar-with-7-lines-of-css-4h7f
  */
