Add screenshots to Vault & Spotlight pages.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -50,6 +50,11 @@ a[name] {
   text-decoration: none;
 }
 
+img.screenshot {
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+
 /* Navbar CSS adapted from
 https://dev.to/supanthapaul/create-a-simple-navbar-with-7-lines-of-css-4h7f
  */
