Change the CSS of the inner container for now. Will need to make site responsive later.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -55,6 +55,12 @@ img.screenshot {
   margin-top: 1rem;
 }
 
+.inner {
+  width: 750px;
+  margin: auto auto;
+  padding: 1rem;
+}
+
 /* Navbar CSS adapted from
 https://dev.to/supanthapaul/create-a-simple-navbar-with-7-lines-of-css-4h7f
  */
