--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,11 +7,16 @@ body {
   color: #4A4A4A;
 }
 
-h1 {
-  color: #6d6d6d;
+#container {
+  background: #fff;
 }
 
-h3 {
+h1 {
+  color: #6d6d6d;
+  margin-bottom: 1rem;
+}
+
+h2, h3 {
   color: #303030d4;
   margin-top: 1rem;
 }
@@ -50,9 +55,49 @@ a[name] {
   text-decoration: none;
 }
 
-img.screenshot {
+img {
   margin-bottom: 1rem;
   margin-top: 1rem;
+}
+
+div.highlight {
+  margin-top: 1rem;
+}
+
+div.flex-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+div.flex-box {
+  margin-top: auto;
+}
+
+span.size-request {
+  display: block;
+  text-align: center;
+}
+
+img.size-example {
+  display: block;
+  margin: 5px auto 5px auto;
+}
+
+.size-figure figcaption {
+  text-align: center;
+  margin-top: 8px;
+  margin-bottom: 20px;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 }
 
 .inner {
