Update region examples.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -78,6 +78,10 @@ span.image-request {
   text-align: center;
 }
 
+span.red-text {
+  color: #C63527;
+}
+
 img.centre-image {
   display: block;
   margin-left: auto;
