--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,9 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
+    <script src="assets/js/initMirador.js"></script>
+    <script onload="initMirador()" async src="https://unpkg.com/mirador@3.3.0/dist/mirador.min.js"></script>
+
     {% seo %}
     {% include head-custom.html %}
 </head>
