Add simple viewer example to Vault page.
The approach for embedding a Mirador viewer has changed because styling a directly-embedded viewer is a bit of a nuisance. Instead, we embed an iframe to a separate mirador page where the viewer fills the screen.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -121,6 +121,17 @@ img.region-example {
   padding: 1rem;
 }
 
+.mirador-iframe {
+  width: 100%;
+  min-height: 400px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.mirador-example-links {
+  margin-bottom: 10px;
+}
+
 /* Navbar CSS adapted from
 https://dev.to/supanthapaul/create-a-simple-navbar-with-7-lines-of-css-4h7f
  */
