--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,6 +33,14 @@ a:hover {
   color: #91281d;
 }
 
+ul.quicklinks {
+  padding-left: 2rem;
+}
+
+ul.quicklinks li {
+  padding-left: 0rem;
+}
+
 header h2 {
   color: #6d6d6d;
 }
